# forgeflow

./: .gitignore  Cargo.toml  README.md  WARP.md  build.rs
docs/: core_concepts.md  events.md  examples.md  future_improvements.md  getting_started.md  llm_integration.md  project_overview.md  tools.md  triggers.md  utilities.md
docs/events/: gmail_event.md
examples/email_manager/: Cargo.toml
examples/email_manager/src/: main.rs
examples/gmail_hook/: Cargo.toml
examples/gmail_hook/src/: main.rs
examples/haiku_generator/: Cargo.toml
examples/haiku_generator/src/: main.rs
examples/telegram_agent/: Cargo.toml
examples/telegram_agent/src/: main.rs
prompt-crafter/: Cargo.toml
prompt-crafter/src/: lib.rs
src/: agent.rs  lib.rs  llm.rs  shutdown.rs
src/llm/: adapters.rs  config.rs  core.rs  factory.rs  retry.rs
src/llm/decorators/: mod.rs  retry.rs
src/tools/: daily_summary_writer.rs  gmail_actions.rs  gmail_tool.rs  mod.rs  simple_file_writer.rs
src/triggers/: event.rs  gmail_watch_trigger.rs  mod.rs  poll_trigger.rs  telegram_bot_trigger.rs  traits.rs
src/utils/: context_hub.rs  google_auth.rs  mod.rs  template.rs
