[package]
name = "forgeflow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  ".",  # The root package (your library)
  "examples/email_manager",
]

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
handlebars = "6.3.2"
rig-core = "0.15.1"
rmcp = "0.3.0"
serde = "1.0.219"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.40"
