[package]
name = "forgeflow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",                        # The root package (your library)
    "examples/gmail_hook",
    "examples/haiku_generator",
    "examples/telegram_agent",
    "prompt-crafter",
]

[dependencies]
webbrowser = "0.8"
async-trait = "0.1.88"
chrono = "0.4.41"
dotenv = "0.15.0"
google-gmail1 = "6.0.0"
handlebars = "6.3.2"
http-body-util = { version = "0.1.3", features = ["full"] }
humantime = "2.1.0"
hyper = { version = "1.6.0", features = ["client", "full", "http1", "http2"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.16", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
rig-core = "0.18.2"
tokio-retry = "0.3.0"
rustls = "0.23.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
teloxide = "0.13.0"
teloxide-core = "0.13.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tokio-utils = "0.1.2"
tracing = "0.1.40"
uuid = { version = "1.17.0", features = ["v4"] }
yup-oauth2 = "12.1.0"

[dev-dependencies]
tempfile = "3.10.1"
lazy_static = "1.4.0"
