[package]
name = "telegram_agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "telegram_agent"
path = "src/main.rs"

[dependencies]
forgeflow = { path = "../../" }
rig-core = "0.18.2"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
